hphp/test/quick/dynamic-call.php.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message ''f17' called dynamically but is not __DynamicallyCallable' in %s/dynamic-call.php:7
Stack trace:
%A
